@@ -2687,6 +2687,7 @@ public abstract class CloudBlob implements ListBlobItem {
                 }
 
                 blob.updateEtagAndLastModifiedFromResponse(this.getConnection());
+                this.getResult().setRequestServiceEncrypted(CloudBlob.isServerRequestEncrypted(this.getConnection()));
                 return null;
             }
         };
@@ -2835,5 +2836,9 @@ public abstract class CloudBlob implements ListBlobItem {
         }
 
         return parentName;
+    }
+    
+    protected static boolean isServerRequestEncrypted(HttpURLConnection connection) {
+        return Constants.TRUE.equals(connection.getHeaderField(Constants.HeaderConstants.SERVER_REQUEST_ENCRYPTED));
     }
 }
