@@ -377,6 +377,7 @@ public final class CloudBlockBlob extends CloudBlob {
                     }
 
                     blob.updateEtagAndLastModifiedFromResponse(this.getConnection());
+                    this.getResult().setRequestServiceEncrypted(CloudBlob.isServerRequestEncrypted(this.getConnection()));
                     return null;
                 }
 
@@ -756,6 +757,7 @@ public final class CloudBlockBlob extends CloudBlob {
                 }
 
                 blob.updateEtagAndLastModifiedFromResponse(this.getConnection());
+                this.getResult().setRequestServiceEncrypted(CloudBlob.isServerRequestEncrypted(this.getConnection()));
                 return null;
             }
 
@@ -946,6 +948,7 @@ public final class CloudBlockBlob extends CloudBlob {
                     return null;
                 }
 
+                this.getResult().setRequestServiceEncrypted(CloudBlob.isServerRequestEncrypted(this.getConnection()));
                 return null;
             }
 
